[package]
name = "acs-api-rs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acs-api-rs = { "git" = "https://github.com/maximmenshikov/acs-api-rs.git" }
# acs-api-rs = { "path" = "../acs-api-rs" }
cliclack = "0.3.5"
